--- a/style/style.css
+++ b/style/style.css
@@ -13,13 +13,13 @@ body {
 
 /*div globale*/
 
-div.main_container {
+/* div.main_container {
   margin-top: 100px;
   min-height: calc(100vh - 160px);
   border-radius: 10px;
   display: flex;
   justify-content: column;
-}
+} */
 
 /*En tête */
 
@@ -48,6 +48,9 @@ header .onglets a {
   color: rgb(92, 95, 92);
   margin-right: 10px;
 }
+#message {
+  margin-top: 100px;
+}
 
 /* biographie */
 
@@ -61,7 +64,16 @@ header .onglets a {
   background-color: white;
   display: flex;
   flex-wrap: wrap;
+  margin-top: -50px;
   margin-bottom: 30px;
+  text-align: justify;
+}
+#bio_author .biographie .left {
+  margin: auto;
+}
+#bio_author .biographie .right h6 {
+  text-align: center;
+  font-size: 18px;
 }
 #bio_author .biographie .left img {
   margin-top: 35px;
@@ -70,7 +82,6 @@ header .onglets a {
   border-radius: 50%;
 }
 #bio_author .biographie .right {
-  max-width: 60%;
   margin-left: 30px;
   margin-right: 40px;
 }
@@ -120,6 +131,7 @@ header .onglets a {
   text-align: justify;
   flex-wrap: wrap;
   width: 100%;
+  padding: 15px;
 }
 
 .articles .article .auteur {
@@ -196,6 +208,16 @@ footer h5 {
   max-width: 90%;
   background-color: burlywood;
 }
+#contenu2 div.main_container {
+  /* display: flex;
+  justify-content: center; */
+  /* align-items: center;
+  flex-direction: column; */
+  margin-top: 100px;
+  min-height: calc(100vh - 160px);
+  border-radius: 10px;
+  /* gap: unset; */
+}
 
 span {
   margin-top: 20px;
@@ -207,17 +229,14 @@ span {
 /*tableau de bord*/
 
 #contenu2 .article {
-  margin-top: -20px;
-  margin-left: -10px;
-  padding: 15px;
   text-align: justify;
   background-color: #fff;
   font-size: 14px;
   color: #000;
   border-radius: 5px;
   width: 450px;
-  height: 50px;
-  overflow: auto;
+  height: 170px;
+  padding: 10px;
 }
 #contenu2 .main_container #title {
   border: 3px solid black;
@@ -305,9 +324,15 @@ input.btn.btn-primary {
 
 /*header*/
 
-#container_articles {
+#contenu2 #main_container .container_articles {
   display: flex;
   justify-content: center;
+}
+.container_articles {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 20px;
 }
 
 #contenu2 h3 {
@@ -321,47 +346,56 @@ input.btn.btn-primary {
 }
 
 #cadre {
-  width: 500px;
-  height: 300px;
-  background-color: pink;
+  width: 49%;
+  /* flex-direction: row; */
+  /* flex-wrap: wrap; */
+  background-color: rgb(201, 147, 21);
+  /* align-content: center;
+  gap: inherit; */
 }
 
 #header_cadre {
   display: flex;
-  width: 100px;
-  height: 100px;
+  justify-content: space-around;
+  align-items: center;
+  width: 200px;
+  height: 50px;
   justify-content: center;
   flex-wrap: wrap;
+  z-index: 1;
+}
+#header_cadre2 {
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+  width: 200px;
+  height: 50px;
 }
 
 #header_cadre .title_dashboard {
   color: black;
-  margin-left: 10px;
 }
 
 .date_dashboard {
+  margin-top: 20px;
+  margin-left: 20px;
   color: black;
-  margin-left: 10px;
   width: 100px;
+  font-weight: bold;
 }
 
 .list-dashboard {
   display: flex;
   flex-wrap: wrap;
   width: 400px;
-  height: 100px;
-  margin-top: 30px;
-  margin-left: 2%;
 }
 
 .link_dashboard {
-  margin-top: 20px;
-  padding-left: 100px;
-  padding-right: -50px;
   font-weight: bolder;
   color: black;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
+  margin-left: 20px;
 }
 
 /*Formulaire de connexion */
