--- a/style/style.css
+++ b/style/style.css
@@ -259,7 +259,7 @@ span {
   flex-direction: column;
   justify-content: center;
   width: 70%;
-  height: 450px;
+  height: 370px;
   margin-left: 100px;
   background-color: peru;
 }
@@ -277,14 +277,72 @@ span {
   padding: 10px;
   width: 70%;
   margin: auto;
+  margin-top: 30px;
 }
 
 .coms_contenu {
-  display: flex;
+  margin: auto;
+  margin-left: 100px;
   flex-direction: column;
-  justify-content: center;
   width: 70%;
   background-color: white;
+  height: 550px;
+}
+
+.coms_contenu h5 {
+  text-align: center;
+  font-size: 25px;
+}
+
+.coms_contenu .pseudo {
+  text-align: center;
+  height: 5px;
+}
+
+.coms_contenu .comment {
+  text-align: justify;
+  padding: 20px;
+  margin-top: -10px;
+  background-color: rgb(116, 76, 11);
+  color: white;
+  width: 80%;
+  margin: auto;
+}
+
+.coms_contenu .link {
+  margin-top: 20px;
+  text-align: center;
+  font-size: 18px;
+}
+
+/*ajout commentaire*/
+
+.ajout_com h2 {
+  text-align: center;
+}
+
+.ajout_com {
+  background-color: #0d6efd;
+  width: 100%;
+}
+
+input.form.form-control {
+  border-radius: 5px;
+  width: 150px;
+  height: 35px;
+}
+input.btn.btn-primary {
+  height: 35px;
+  width: 200px;
+  background-color: #0d6efd;
+  color: #fff;
+  font-weight: bolder;
+  border-radius: 5px;
+}
+
+textarea {
+  width: 200px;
+  height: 60px;
 }
 
 /*tableau de bord*/
@@ -354,7 +412,7 @@ span {
 
 /*formulaire*/
 .form {
-  margin-left: 20%;
+  margin-left: auto;
   margin-top: 150px;
   max-width: 600px;
 }
@@ -374,19 +432,6 @@ span {
   font-size: 14px;
   font-weight: bolder;
   background-color: burlywood;
-}
-
-input.form.form-control {
-  border-radius: 5px;
-}
-
-input.btn.btn-primary {
-  height: 35px;
-  width: 200px;
-  background-color: #0d6efd;
-  color: #fff;
-  font-weight: bolder;
-  border-radius: 5px;
 }
 
 /*tableau de bord*/
@@ -517,10 +562,17 @@ input.btn.btn-primary {
 
 .success {
   color: green;
+  /* text-align: center;
+  font-weight: bold; */
+  font-size: 18px;
+  margin-top: 100px;
 }
 
 .error {
   color: red;
+  /* text-align: center;
+  font-weight: bold; */
+  font-size: 18px;
 }
 
 /*responsive*/
